deadcode.output
Grammar

    0 $accept: program $end

    1 program: functions

    2 functions: function functions
    3          | %empty

    4 function: INT IDENTIFIER LPAREN params RPAREN LBRACE stmts RBRACE

    5 params: %empty
    6       | param
    7       | param COMMA params

    8 param: INT IDENTIFIER

    9 stmts: %empty
   10      | stmt stmts

   11 stmt_block: LBRACE stmts RBRACE

   12 stmt: RETURN expression SEMICOLON
   13     | expression SEMICOLON
   14     | IDENTIFIER LPAREN args RPAREN SEMICOLON
   15     | INT IDENTIFIER SEMICOLON
   16     | IDENTIFIER '=' expression SEMICOLON
   17     | IF LPAREN expression RPAREN stmt_block
   18     | IF LPAREN expression RPAREN stmt_block ELSE stmt_block

   19 args: %empty
   20     | expression
   21     | expression COMMA args

   22 expression: IDENTIFIER
   23           | NUMBER
   24           | expression PLUS expression
   25           | expression MINUS expression
   26           | expression MULT expression
   27           | expression DIV expression
   28           | expression LT expression
   29           | expression GT expression
   30           | expression EQ expression
   31           | expression NE expression
   32           | expression LE expression
   33           | expression GE expression
   34           | LPAREN expression RPAREN


Terminals, with rules where they appear

    $end (0) 0
    '=' (61) 16
    error (256)
    IDENTIFIER <str> (258) 4 8 14 15 16 22
    NUMBER <num> (259) 23
    INT (260) 4 8 15
    RETURN (261) 12
    IF (262) 17 18
    ELSE (263) 18
    LBRACE (264) 4 11
    RBRACE (265) 4 11
    LPAREN (266) 4 14 17 18 34
    RPAREN (267) 4 14 17 18 34
    SEMICOLON (268) 12 13 14 15 16
    COMMA (269) 7 21
    PLUS (270) 24
    MINUS (271) 25
    MULT (272) 26
    DIV (273) 27
    EQ (274) 30
    NE (275) 31
    LE (276) 32
    GE (277) 33
    LT (278) 28
    GT (279) 29


Nonterminals, with rules where they appear

    $accept (26)
        on left: 0
    program (27)
        on left: 1
        on right: 0
    functions (28)
        on left: 2 3
        on right: 1 2
    function (29)
        on left: 4
        on right: 2
    params (30)
        on left: 5 6 7
        on right: 4 7
    param (31)
        on left: 8
        on right: 6 7
    stmts <str> (32)
        on left: 9 10
        on right: 4 10 11
    stmt_block <str> (33)
        on left: 11
        on right: 17 18
    stmt <str> (34)
        on left: 12 13 14 15 16 17 18
        on right: 10
    args <str> (35)
        on left: 19 20 21
        on right: 14 21
    expression <str> (36)
        on left: 22 23 24 25 26 27 28 29 30 31 32 33 34
        on right: 12 13 16 17 18 20 21 24 25 26 27 28 29 30 31 32 33 34


State 0

    0 $accept: . program $end

    INT  shift, and go to state 1

    $default  reduce using rule 3 (functions)

    program    go to state 2
    functions  go to state 3
    function   go to state 4


State 1

    4 function: INT . IDENTIFIER LPAREN params RPAREN LBRACE stmts RBRACE

    IDENTIFIER  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: functions .

    $default  reduce using rule 1 (program)


State 4

    2 functions: function . functions

    INT  shift, and go to state 1

    $default  reduce using rule 3 (functions)

    functions  go to state 7
    function   go to state 4


State 5

    4 function: INT IDENTIFIER . LPAREN params RPAREN LBRACE stmts RBRACE

    LPAREN  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    2 functions: function functions .

    $default  reduce using rule 2 (functions)


State 8

    4 function: INT IDENTIFIER LPAREN . params RPAREN LBRACE stmts RBRACE

    INT  shift, and go to state 9

    $default  reduce using rule 5 (params)

    params  go to state 10
    param   go to state 11


State 9

    8 param: INT . IDENTIFIER

    IDENTIFIER  shift, and go to state 12


State 10

    4 function: INT IDENTIFIER LPAREN params . RPAREN LBRACE stmts RBRACE

    RPAREN  shift, and go to state 13


State 11

    6 params: param .
    7       | param . COMMA params

    COMMA  shift, and go to state 14

    $default  reduce using rule 6 (params)


State 12

    8 param: INT IDENTIFIER .

    $default  reduce using rule 8 (param)


State 13

    4 function: INT IDENTIFIER LPAREN params RPAREN . LBRACE stmts RBRACE

    LBRACE  shift, and go to state 15


State 14

    7 params: param COMMA . params

    INT  shift, and go to state 9

    $default  reduce using rule 5 (params)

    params  go to state 16
    param   go to state 11


State 15

    4 function: INT IDENTIFIER LPAREN params RPAREN LBRACE . stmts RBRACE

    IDENTIFIER  shift, and go to state 17
    NUMBER      shift, and go to state 18
    INT         shift, and go to state 19
    RETURN      shift, and go to state 20
    IF          shift, and go to state 21
    LPAREN      shift, and go to state 22

    $default  reduce using rule 9 (stmts)

    stmts       go to state 23
    stmt        go to state 24
    expression  go to state 25


State 16

    7 params: param COMMA params .

    $default  reduce using rule 7 (params)


State 17

   14 stmt: IDENTIFIER . LPAREN args RPAREN SEMICOLON
   16     | IDENTIFIER . '=' expression SEMICOLON
   22 expression: IDENTIFIER .

    LPAREN  shift, and go to state 26
    '='     shift, and go to state 27

    $default  reduce using rule 22 (expression)


State 18

   23 expression: NUMBER .

    $default  reduce using rule 23 (expression)


State 19

   15 stmt: INT . IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 28


State 20

   12 stmt: RETURN . expression SEMICOLON

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    expression  go to state 30


State 21

   17 stmt: IF . LPAREN expression RPAREN stmt_block
   18     | IF . LPAREN expression RPAREN stmt_block ELSE stmt_block

    LPAREN  shift, and go to state 31


State 22

   34 expression: LPAREN . expression RPAREN

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    expression  go to state 32


State 23

    4 function: INT IDENTIFIER LPAREN params RPAREN LBRACE stmts . RBRACE

    RBRACE  shift, and go to state 33


State 24

   10 stmts: stmt . stmts

    IDENTIFIER  shift, and go to state 17
    NUMBER      shift, and go to state 18
    INT         shift, and go to state 19
    RETURN      shift, and go to state 20
    IF          shift, and go to state 21
    LPAREN      shift, and go to state 22

    $default  reduce using rule 9 (stmts)

    stmts       go to state 34
    stmt        go to state 24
    expression  go to state 25


State 25

   13 stmt: expression . SEMICOLON
   24 expression: expression . PLUS expression
   25           | expression . MINUS expression
   26           | expression . MULT expression
   27           | expression . DIV expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . EQ expression
   31           | expression . NE expression
   32           | expression . LE expression
   33           | expression . GE expression

    SEMICOLON  shift, and go to state 35
    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    MULT       shift, and go to state 38
    DIV        shift, and go to state 39
    EQ         shift, and go to state 40
    NE         shift, and go to state 41
    LE         shift, and go to state 42
    GE         shift, and go to state 43
    LT         shift, and go to state 44
    GT         shift, and go to state 45


State 26

   14 stmt: IDENTIFIER LPAREN . args RPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    $default  reduce using rule 19 (args)

    args        go to state 46
    expression  go to state 47


State 27

   16 stmt: IDENTIFIER '=' . expression SEMICOLON

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    expression  go to state 48


State 28

   15 stmt: INT IDENTIFIER . SEMICOLON

    SEMICOLON  shift, and go to state 49


State 29

   22 expression: IDENTIFIER .

    $default  reduce using rule 22 (expression)


State 30

   12 stmt: RETURN expression . SEMICOLON
   24 expression: expression . PLUS expression
   25           | expression . MINUS expression
   26           | expression . MULT expression
   27           | expression . DIV expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . EQ expression
   31           | expression . NE expression
   32           | expression . LE expression
   33           | expression . GE expression

    SEMICOLON  shift, and go to state 50
    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    MULT       shift, and go to state 38
    DIV        shift, and go to state 39
    EQ         shift, and go to state 40
    NE         shift, and go to state 41
    LE         shift, and go to state 42
    GE         shift, and go to state 43
    LT         shift, and go to state 44
    GT         shift, and go to state 45


State 31

   17 stmt: IF LPAREN . expression RPAREN stmt_block
   18     | IF LPAREN . expression RPAREN stmt_block ELSE stmt_block

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    expression  go to state 51


State 32

   24 expression: expression . PLUS expression
   25           | expression . MINUS expression
   26           | expression . MULT expression
   27           | expression . DIV expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . EQ expression
   31           | expression . NE expression
   32           | expression . LE expression
   33           | expression . GE expression
   34           | LPAREN expression . RPAREN

    RPAREN  shift, and go to state 52
    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    MULT    shift, and go to state 38
    DIV     shift, and go to state 39
    EQ      shift, and go to state 40
    NE      shift, and go to state 41
    LE      shift, and go to state 42
    GE      shift, and go to state 43
    LT      shift, and go to state 44
    GT      shift, and go to state 45


State 33

    4 function: INT IDENTIFIER LPAREN params RPAREN LBRACE stmts RBRACE .

    $default  reduce using rule 4 (function)


State 34

   10 stmts: stmt stmts .

    $default  reduce using rule 10 (stmts)


State 35

   13 stmt: expression SEMICOLON .

    $default  reduce using rule 13 (stmt)


State 36

   24 expression: expression PLUS . expression

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    expression  go to state 53


State 37

   25 expression: expression MINUS . expression

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    expression  go to state 54


State 38

   26 expression: expression MULT . expression

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    expression  go to state 55


State 39

   27 expression: expression DIV . expression

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    expression  go to state 56


State 40

   30 expression: expression EQ . expression

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    expression  go to state 57


State 41

   31 expression: expression NE . expression

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    expression  go to state 58


State 42

   32 expression: expression LE . expression

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    expression  go to state 59


State 43

   33 expression: expression GE . expression

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    expression  go to state 60


State 44

   28 expression: expression LT . expression

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    expression  go to state 61


State 45

   29 expression: expression GT . expression

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    expression  go to state 62


State 46

   14 stmt: IDENTIFIER LPAREN args . RPAREN SEMICOLON

    RPAREN  shift, and go to state 63


State 47

   20 args: expression .
   21     | expression . COMMA args
   24 expression: expression . PLUS expression
   25           | expression . MINUS expression
   26           | expression . MULT expression
   27           | expression . DIV expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . EQ expression
   31           | expression . NE expression
   32           | expression . LE expression
   33           | expression . GE expression

    COMMA  shift, and go to state 64
    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MULT   shift, and go to state 38
    DIV    shift, and go to state 39
    EQ     shift, and go to state 40
    NE     shift, and go to state 41
    LE     shift, and go to state 42
    GE     shift, and go to state 43
    LT     shift, and go to state 44
    GT     shift, and go to state 45

    $default  reduce using rule 20 (args)


State 48

   16 stmt: IDENTIFIER '=' expression . SEMICOLON
   24 expression: expression . PLUS expression
   25           | expression . MINUS expression
   26           | expression . MULT expression
   27           | expression . DIV expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . EQ expression
   31           | expression . NE expression
   32           | expression . LE expression
   33           | expression . GE expression

    SEMICOLON  shift, and go to state 65
    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    MULT       shift, and go to state 38
    DIV        shift, and go to state 39
    EQ         shift, and go to state 40
    NE         shift, and go to state 41
    LE         shift, and go to state 42
    GE         shift, and go to state 43
    LT         shift, and go to state 44
    GT         shift, and go to state 45


State 49

   15 stmt: INT IDENTIFIER SEMICOLON .

    $default  reduce using rule 15 (stmt)


State 50

   12 stmt: RETURN expression SEMICOLON .

    $default  reduce using rule 12 (stmt)


State 51

   17 stmt: IF LPAREN expression . RPAREN stmt_block
   18     | IF LPAREN expression . RPAREN stmt_block ELSE stmt_block
   24 expression: expression . PLUS expression
   25           | expression . MINUS expression
   26           | expression . MULT expression
   27           | expression . DIV expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . EQ expression
   31           | expression . NE expression
   32           | expression . LE expression
   33           | expression . GE expression

    RPAREN  shift, and go to state 66
    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    MULT    shift, and go to state 38
    DIV     shift, and go to state 39
    EQ      shift, and go to state 40
    NE      shift, and go to state 41
    LE      shift, and go to state 42
    GE      shift, and go to state 43
    LT      shift, and go to state 44
    GT      shift, and go to state 45


State 52

   34 expression: LPAREN expression RPAREN .

    $default  reduce using rule 34 (expression)


State 53

   24 expression: expression . PLUS expression
   24           | expression PLUS expression .
   25           | expression . MINUS expression
   26           | expression . MULT expression
   27           | expression . DIV expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . EQ expression
   31           | expression . NE expression
   32           | expression . LE expression
   33           | expression . GE expression

    MULT  shift, and go to state 38
    DIV   shift, and go to state 39

    $default  reduce using rule 24 (expression)


State 54

   24 expression: expression . PLUS expression
   25           | expression . MINUS expression
   25           | expression MINUS expression .
   26           | expression . MULT expression
   27           | expression . DIV expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . EQ expression
   31           | expression . NE expression
   32           | expression . LE expression
   33           | expression . GE expression

    MULT  shift, and go to state 38
    DIV   shift, and go to state 39

    $default  reduce using rule 25 (expression)


State 55

   24 expression: expression . PLUS expression
   25           | expression . MINUS expression
   26           | expression . MULT expression
   26           | expression MULT expression .
   27           | expression . DIV expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . EQ expression
   31           | expression . NE expression
   32           | expression . LE expression
   33           | expression . GE expression

    $default  reduce using rule 26 (expression)


State 56

   24 expression: expression . PLUS expression
   25           | expression . MINUS expression
   26           | expression . MULT expression
   27           | expression . DIV expression
   27           | expression DIV expression .
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . EQ expression
   31           | expression . NE expression
   32           | expression . LE expression
   33           | expression . GE expression

    $default  reduce using rule 27 (expression)


State 57

   24 expression: expression . PLUS expression
   25           | expression . MINUS expression
   26           | expression . MULT expression
   27           | expression . DIV expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . EQ expression
   30           | expression EQ expression .
   31           | expression . NE expression
   32           | expression . LE expression
   33           | expression . GE expression

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MULT   shift, and go to state 38
    DIV    shift, and go to state 39

    $default  reduce using rule 30 (expression)


State 58

   24 expression: expression . PLUS expression
   25           | expression . MINUS expression
   26           | expression . MULT expression
   27           | expression . DIV expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . EQ expression
   31           | expression . NE expression
   31           | expression NE expression .
   32           | expression . LE expression
   33           | expression . GE expression

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MULT   shift, and go to state 38
    DIV    shift, and go to state 39

    $default  reduce using rule 31 (expression)


State 59

   24 expression: expression . PLUS expression
   25           | expression . MINUS expression
   26           | expression . MULT expression
   27           | expression . DIV expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . EQ expression
   31           | expression . NE expression
   32           | expression . LE expression
   32           | expression LE expression .
   33           | expression . GE expression

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MULT   shift, and go to state 38
    DIV    shift, and go to state 39

    $default  reduce using rule 32 (expression)


State 60

   24 expression: expression . PLUS expression
   25           | expression . MINUS expression
   26           | expression . MULT expression
   27           | expression . DIV expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . EQ expression
   31           | expression . NE expression
   32           | expression . LE expression
   33           | expression . GE expression
   33           | expression GE expression .

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MULT   shift, and go to state 38
    DIV    shift, and go to state 39

    $default  reduce using rule 33 (expression)


State 61

   24 expression: expression . PLUS expression
   25           | expression . MINUS expression
   26           | expression . MULT expression
   27           | expression . DIV expression
   28           | expression . LT expression
   28           | expression LT expression .
   29           | expression . GT expression
   30           | expression . EQ expression
   31           | expression . NE expression
   32           | expression . LE expression
   33           | expression . GE expression

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MULT   shift, and go to state 38
    DIV    shift, and go to state 39

    $default  reduce using rule 28 (expression)


State 62

   24 expression: expression . PLUS expression
   25           | expression . MINUS expression
   26           | expression . MULT expression
   27           | expression . DIV expression
   28           | expression . LT expression
   29           | expression . GT expression
   29           | expression GT expression .
   30           | expression . EQ expression
   31           | expression . NE expression
   32           | expression . LE expression
   33           | expression . GE expression

    PLUS   shift, and go to state 36
    MINUS  shift, and go to state 37
    MULT   shift, and go to state 38
    DIV    shift, and go to state 39

    $default  reduce using rule 29 (expression)


State 63

   14 stmt: IDENTIFIER LPAREN args RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 67


State 64

   21 args: expression COMMA . args

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 18
    LPAREN      shift, and go to state 22

    $default  reduce using rule 19 (args)

    args        go to state 68
    expression  go to state 47


State 65

   16 stmt: IDENTIFIER '=' expression SEMICOLON .

    $default  reduce using rule 16 (stmt)


State 66

   17 stmt: IF LPAREN expression RPAREN . stmt_block
   18     | IF LPAREN expression RPAREN . stmt_block ELSE stmt_block

    LBRACE  shift, and go to state 69

    stmt_block  go to state 70


State 67

   14 stmt: IDENTIFIER LPAREN args RPAREN SEMICOLON .

    $default  reduce using rule 14 (stmt)


State 68

   21 args: expression COMMA args .

    $default  reduce using rule 21 (args)


State 69

   11 stmt_block: LBRACE . stmts RBRACE

    IDENTIFIER  shift, and go to state 17
    NUMBER      shift, and go to state 18
    INT         shift, and go to state 19
    RETURN      shift, and go to state 20
    IF          shift, and go to state 21
    LPAREN      shift, and go to state 22

    $default  reduce using rule 9 (stmts)

    stmts       go to state 71
    stmt        go to state 24
    expression  go to state 25


State 70

   17 stmt: IF LPAREN expression RPAREN stmt_block .
   18     | IF LPAREN expression RPAREN stmt_block . ELSE stmt_block

    ELSE  shift, and go to state 72

    $default  reduce using rule 17 (stmt)


State 71

   11 stmt_block: LBRACE stmts . RBRACE

    RBRACE  shift, and go to state 73


State 72

   18 stmt: IF LPAREN expression RPAREN stmt_block ELSE . stmt_block

    LBRACE  shift, and go to state 69

    stmt_block  go to state 74


State 73

   11 stmt_block: LBRACE stmts RBRACE .

    $default  reduce using rule 11 (stmt_block)


State 74

   18 stmt: IF LPAREN expression RPAREN stmt_block ELSE stmt_block .

    $default  reduce using rule 18 (stmt)
